hub-auth/kustomize/hub-auth/overlays/local/hub-auth/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-auth
  labels:
    app: auth
spec:
  tls:
  - hosts:
      - $(AUTH_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(AUTH_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hub-auth
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-hydra
  labels:
    app: hydra
spec:
  tls:
  - hosts:
      - $(HYDRA_PUBLIC_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(HYDRA_PUBLIC_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hub-hydra
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-hydra-admin
  labels:
    app: hydra
spec:
  tls:
  - hosts:
      - $(HYDRA_ADMIN_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(HYDRA_ADMIN_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hub-hydra-admin
            port:
              name: http
